--- a/src/pug/layouts/head.pug
+++ b/src/pug/layouts/head.pug
@@ -5,3 +5,5 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible" content="ie=edge")
         title HTML Starter Kit
+        link(rel="stylesheet" href="assets/css/bootstrap.min.css")
+        link(rel="stylesheet" href="assets/css/app.min.css")
