--- a/src/views/layouts/head.pug
+++ b/src/views/layouts/head.pug
@@ -5,6 +5,7 @@ html(lang="en")
         meta(name="viewport", content="width=device-width, initial-scale=1.0")
         meta(http-equiv="X-UA-Compatible" content="ie=edge")
         title HTML Starter Kit
-
-        link(rel="stylesheet" href="assets/css/bootstrap.min.css")
-        link(rel="stylesheet" href="assets/css/styles.min.css")
+        //  build:css assets/css/combined.css
+        link(rel="stylesheet" href="css/bootstrap.min.css")
+        link(rel="stylesheet" href="css/styles.min.css")
+        //  endbuild
