--- a/src/views/layouts/app.pug
+++ b/src/views/layouts/app.pug
@@ -1,6 +1,8 @@
-include head
+doctype html
+html
+    head
+        include head
+    body
+        block content
 
-body
-    block content
-
-include footer
+        include footer
