--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,1 +1,15 @@
-@import "pages/home";
+@import "variables";
+
+@font-face {
+  font-family: 'Roboto';
+  src: url('../fonts/Roboto-Regular.ttf') format('tff');
+  font-weight: 400;
+  font-style: normal;
+}
+
+body {
+  height: 100vh;
+  width: 100vw;
+  font-family: 'Roboto',sans-serif;
+  color: mediumseagreen;
+}
